--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Another Me</string>
     <string name="action_settings">Settings</string>
+    <string name="action_camera">Camera</string>
+    <string name="action_SMS">SMS</string>
+    <string name="action_notification">Notification</string>
     <string-array name="solution_array">
         <item>SMS</item>
         <item>Pop-up</item>
