--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
         <item>SMS</item>
         <item>Pop-up</item>
     </string-array>
+    <string name="title_activity_connector">ConnectorActivity</string>
 </resources>
 
 
