--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="action_camera">Camera</string>
     <string name="action_SMS">SMS</string>
     <string name="action_notification">Notification</string>
-    <string name="action_register">Register</string>
+    <string name="action_logout">Logout</string>
     <string-array name="action_array">
         <item>פגישה</item>
         <item>סרט</item>
