--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_history">History</string>
     <string name="action_camera">Camera</string>
     <string name="action_SMS">SMS</string>
+    <string name="fragment_user">User Manager</string>
     <string name="action_notification">Notification</string>
     <string-array name="action_array">
         <item>פגישה</item>
@@ -16,6 +17,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_share">Share</string>
+    <string name="title_activity_base">BaseActivity</string>
 </resources>
 
 
