--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,16 @@
     <string name="fragment_user">User Manager</string>
     <string name="action_notification">Notification</string>
     <string-array name="action_array">
-        <item>פגישה</item>
-        <item>סרט</item>
+        <item>שום דבר</item>
+        <item>לשאול</item>
+        <item>פופ אפ</item>
+        <item>סמס</item>
+        <item>כרטיסים</item>
+        <item>קניות</item>
         <item>ביביסיטר</item>
+        <item>פגישה</item>
+        <item>מסימת יומן</item>
+        <item>משימת אפליקציה</item>
     </string-array>
     <string name="title_activity_connector">ConnectorActivity</string>
 
